# Weather-App

./: .gitignore  Jenkinsfile  LICENSE  README.md  branch_activity_report.py  main.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: package-app.yml  python-app.yml
controller/: main_controller.py  weather_controller.py
model/: weather_model.py
src/JureCacilo_weather_app/: main.py
src/JureCacilo_weather_app/controller/: main_controller.py  weather_controller.py
src/JureCacilo_weather_app/model/: weather_model.py  weather_model_item.py
src/JureCacilo_weather_app/tests/: test_change_city.py
src/JureCacilo_weather_app/view/: weather_plot_view.py  weather_view.py
src/JureCacilo_weather_app/xml_parser/: weather_parser.py
tests/: test_change_city.py
utils/: utils.py
view/: weather_plot_view.py  weather_view.py
xml_parser/: weather_parser.py
