[metadata]
name = JureCacilo_weather_app
author = Jure Cacilo
description = Weather app package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JureCacilo/Weather-App

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



[options]
install_requires =
    pytest==7.0.1
    PyQt5==5.10.1
    PyQt5-stubs==5.15.6.0
    pyqtgraph==0.11.1


package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src